[package]
name = "reina_migrator"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"

[profile.release]
opt-level = "z"            # optimize for size (use 3 for max speed)
lto = true                  # enable link time optimization
codegen-units = 1           # better optimizations
panic = "abort"            # smaller binary
strip = "debuginfo"       # strip debug info from final binary
